script link changed

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   
 
-  <script type="module" src="src/scripts/GoIT-hw-02.js"></script>
-  <!-- <script type="module" src="src/scripts/practical-task-01.js"></script> -->
+  <script type="module" src="src/scripts/practical-task-01.js"></script>
   <!-- <script type="module" src="src/scripts/practical-task-02.js"></script> -->
+  <!-- <script type="module" src="src/scripts/GoIT-hw-02.js"></script> -->
 </body>
 </html>
