--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   
+  <!-- <script type="module" src="src/scripts/lesson.js"></script> -->
 
   <script type="module" src="src/scripts/practical-task-01.js"></script>
   <!-- <script type="module" src="src/scripts/practical-task-02.js"></script> -->
