--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 </head>
 <body>
   
-  <!-- <script type="module" src="src/scripts/lesson.js"></script> -->
-
   <!-- <script type="module" src="src/scripts/practical-task-01.js"></script> -->
-  <script type="module" src="src/scripts/practical-task-02.js"></script>
-  <!-- <script type="module" src="src/scripts/GoIT-hw-02.js"></script> -->
+  <!-- <script type="module" src="src/scripts/practical-task-02.js"></script> -->
+  <script type="module" src="src/scripts/GoIT-hw-02.js"></script>
 </body>
 </html>
